force-app/main/default/objects/Employee__c/fields/Employee_Bio__c.field-meta.xml
<CustomField>
    <fullName>Employee_Bio__c</fullName>
    <description>Brief biography of the employee.</description>
    <inlineHelpText>Enter the employee&apos;s biography.</inlineHelpText>
    <label>Employee Bio</label>
    <type>TextArea</type>
</CustomField>