force-app/main/default/objects/Employee__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Employee&apos;s fax number</description>
    <inlineHelpText>Enter employee&apos;s fax number</inlineHelpText>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>