force-app/main/default/objects/Employee__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <description>The mobile phone number of the employee.</description>
    <inlineHelpText>Enter the employee&apos;s mobile phone number.</inlineHelpText>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>