force-app/main/default/objects/Employee__c/fields/Office_Email__c.field-meta.xml
<CustomField>
    <fullName>Office_Email__c</fullName>
    <description>The office (business) email for the employee.</description>
    <inlineHelpText>Enter the employee&apos;s office email address.</inlineHelpText>
    <label>Office Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>