force-app/main/default/objects/Employee__c/fields/Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>Office_Phone__c</fullName>
    <description>The office phone number for the employee.</description>
    <inlineHelpText>Enter the employee&apos;s office phone number.</inlineHelpText>
    <label>Office Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>