force-app/main/default/objects/Employee__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the employee record of the current employee&apos;s manager.</description>
    <inlineHelpText>Lookup the user that this employee reports to.</inlineHelpText>
    <label>Reports To</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Direct Reports</relationshipLabel>
    <relationshipName>Direct_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>