force-app/main/default/objects/Employee__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The employee&apos;s job title.</description>
    <inlineHelpText>Enter the job title of the employee.</inlineHelpText>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Accounting Intern</fullName>
            </value>
            <value>
                <fullName>Accounts Payable Specialist</fullName>
            </value>
            <value>
                <fullName>Admin Intern</fullName>
            </value>
            <value>
                <fullName>Administrative Assistant</fullName>
            </value>
            <value>
                <fullName>Assistant Controller</fullName>
            </value>
            <value>
                <fullName>Assistant General Counsel</fullName>
            </value>
            <value>
                <fullName>Benefits Admin Assistant</fullName>
            </value>
            <value>
                <fullName>Benefits Administrator</fullName>
            </value>
            <value>
                <fullName>Benefits Billing Coordinator</fullName>
            </value>
            <value>
                <fullName>Benefits Implementation Director</fullName>
            </value>
            <value>
                <fullName>Benefits Implementation Specialist</fullName>
            </value>
            <value>
                <fullName>Benefits Intern</fullName>
            </value>
            <value>
                <fullName>Benefits Manager</fullName>
            </value>
            <value>
                <fullName>Benefits Specialist</fullName>
            </value>
            <value>
                <fullName>Benefits Team Leader</fullName>
            </value>
            <value>
                <fullName>Business Consultant</fullName>
            </value>
            <value>
                <fullName>Business Development Associate/Recruiter</fullName>
            </value>
            <value>
                <fullName>Business Development Consultant</fullName>
            </value>
            <value>
                <fullName>Business Development Manager</fullName>
            </value>
            <value>
                <fullName>CEO &amp; Co-Founder</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>Chief Legal Officer</fullName>
            </value>
            <value>
                <fullName>Chief Sales Officer</fullName>
            </value>
            <value>
                <fullName>Client Acquisition Analyst</fullName>
            </value>
            <value>
                <fullName>Client Acquisition Director</fullName>
            </value>
            <value>
                <fullName>Client Acquisition Manager</fullName>
            </value>
            <value>
                <fullName>Client Acquistion Coordinator</fullName>
            </value>
            <value>
                <fullName>Client HR Director</fullName>
            </value>
            <value>
                <fullName>Client Integration Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>