force-app/main/default/objects/Employee__c/listViews/All_Employees.listView-meta.xml
<ListView>
    <fullName>All_Employees</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Employees</label>
    <sharedTo>
        <role>Trion_Executive</role>
    </sharedTo>
</ListView>